--- a/beyond-library-svc-account/src/main/resources/application.yml
+++ b/beyond-library-svc-account/src/main/resources/application.yml
@@ -8,15 +8,13 @@ spring:
     name: beyond-library-svc-account
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/beyond-library-account?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai&useSSL=false
+    url: jdbc:mysql://172.24.160.1:3306/beyond-library-account?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai&useSSL=false
     username: root
     password: beyond
-  jpa:
-    show-sql: true
   cloud:
     nacos:
       username: nacos
       password: nacos
       discovery:
-        ip: 192.168.1.10
-
+        server-addr: 172.24.160.1:8848
+        ip: 172.24.160.1
