--- a/beyond-library-gateway/src/main/resources/application.yml
+++ b/beyond-library-gateway/src/main/resources/application.yml
@@ -8,8 +8,8 @@ spring:
     nacos:
       username: nacos
       password: nacos
-    #      discovery:
-    #        ip: 192.168.1.10
+      discovery:
+        ip: 172.20.57.241
     gateway:
       enabled: true
       httpclient:
