feat：添加 circuit breaker 熔断

--- a/beyond-library-gateway/src/main/resources/application.yml
+++ b/beyond-library-gateway/src/main/resources/application.yml
@@ -29,7 +29,6 @@ spring:
             - Authentication
             - Authorization
 
-
 management:
   server:
     port: 81
@@ -48,6 +47,8 @@ logging:
   level:
     root: info
 feign:
+  circuitbreaker:
+    enabled: true
   encoder:
     charset-from-content-type: true
   client:
